adding an identifier to expressions, statements, and withanalysis